ajustes do sasl

--- a/properties/jmeter.properties
+++ b/properties/jmeter.properties
@@ -1,8 +1,8 @@
 # Properties for Prometheus Listener. Refers: https://github.com/johrstrom/jmeter-prometheus-plugin
 prometheus.port=9270
-prometheus.ip=0.0.0.0
+prometheus.ip=https://prometheus-kafka.apps.ocp.desenv.com
 jmeter.threads=2
-bootstrap.servers=192.168.0.117:9092
+bootstrap.servers=amq-hml-kafka-bootstrap-kafka.apps.ocp.desenv.com:443
 # batch.size=1024
 # linger.ms=1
 # buffer.memory=1024
@@ -10,12 +10,12 @@ bootstrap.servers=192.168.0.117:9092
 # compression.type=
 # send_buffer.bytes=
 # receive_buffer.bytes=
-kafka.topic=jmeter-test1
+kafka.topic=teste-ha
 partition.no=2
 ramup.period=2
 loop.count=-1
 sampler.label=JMeter Test 1
-kafka.message=This is kafka message
+kafka.message=This is kafka message Hml
 threadgroup.scheduler=false
 threadgroup.duration=0
 threadgroup.delay=0
